[package]
name = "one-stock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features=["serde", "rustc-serialize"]}
csv = "1.3"
serde = {version = "1.0", features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
plotters = "0.3"